--- a/recipes/styles-squash.css
+++ b/recipes/styles-squash.css
@@ -1,30 +1,38 @@
 
 .flex-container{
     display: flex;
-    padding: 6px;
+    padding: 20px;
 }
 
 .flex-container.one{
     background-color: coral;
-    border: 2px solid limegreen;
+    border: 6px solid limegreen;
     height: auto;
 }
 
 .flex-container.two{
     background-color: rgb(222, 222, 45);
-    border: 2px solid rgb(26, 203, 165);
+    border: 6px solid rgb(26, 203, 165);
     height: auto;
 }
 
 .item{
     flex: 1;
     background-color: rgb(192, 90, 17);
-    border: 2px solid rgb(183, 16, 111);
+    background-image: url(../china.jpeg);
+    border: 6px solid rgb(183, 16, 111);
     height: auto;
-    padding: 2px;
+    padding: 10px;
     text-align: center;
 }
 
+.item.large{
+    flex: 2 1 auto;
+}
+
+.item.small{
+    flex: 0 1 auto;
+}
 
 .squash {
     color: rgb(111, 28, 180);
@@ -35,12 +43,15 @@
 
 .button{
     background-color: cadetblue;
+    color: rgb(42, 87, 5);
     border: 4px solid blue;
     padding: 6px;
     width: min-content;
     height: min-content;
+    font-size: large;
 }
 
 .button:hover{
     background-color: rgb(69, 113, 115);
+    color: rgb(0, 0, 0);
 }
