--- a/styles-index.css
+++ b/styles-index.css
@@ -1,6 +1,11 @@
 
 .flex-container{
     display: flex;
+    gap: 6px;
+}
+
+.flex-container.vert{
+    flex-direction: column;
 }
 
 .flex-container.one{
@@ -9,8 +14,8 @@
 
 .item{
     background-color: coral;
-    text-align: center;
-    flex: 1;
+    text-align: left;
+    flex: 1 1 auto;
 }
 
 .button{
